# fastapi-returns

./: .gitignore  pyproject.toml
tests/: conftest.py  test_fastapi_returns.py  test_result_wrappers.py  test_wrappers.py
